# rust-axum-course-web-development

./: Cargo.toml  README.md
examples/: quick_dev.rs
src/: error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
