[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.10.1", features = ["full"] }
# Serde
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
# Axum
axum = "0.7.9"
tower-http ={ version = "0.6.2", features = ["fs"] }
tower-cookies = "0.10"
# Others
lazy-regex = "3.3.0"
async-trait = "0.1.83"
strum_macros = "0.26.4"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
